# TinyMUSH

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  CODE_ANALYSIS.md  CODE_OF_CONDUCT.md  COMMANDS_AND_REGISTRIES_REFERENCE.md  CONTRIBUTING.md  CONVERTING.md  COPYING  COPYING.md  ChangeLog  ChangeLog.Alpha  ChangeLog.History  ChangeLog.md  FAQ  INSTALL  INSTALL.md  KNOWN_BUGS.md  MODULES  MODULES.md  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  SECURITY.md  TEST_CUSTOM_ATTR_FIX.md  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  debug.sh  index.html  (+16 more)
.ci/: Doxyfile  after_success.sh  before_install.sh  dependencies.sh  generateDocumentation.sh  linux-build.sh  setup-ssh.sh  travis_deploy_key.enc
.github/: Doxyfile  copilot-instructions.md
autom4te.cache/: output.0  output.1  requests  traces.0  traces.0t  traces.1  (+1 more)
modules/db_sql/: Makefile.am  Makefile.in  db_sql_pgsql.c
modules/db_sql/m4/: ax_check_mysql.m4  ax_check_pgsql.m4
netmush/: CMakeLists.txt  alloc.c  api.c  boolexp.c  bsd.c  command.c  conf.c  config.h  config.h.good  config.h.in  constants.h  cque.c  create.c  db.c  db_rw.c  defaults.h  defaults.h.in  eval.c  file_c.c  flags.c  fnhelper.c  functions.c  funext.c  funiter.c  funlist.c  funmath.c  funmisc.c  funobj.c  funstring.c  funvars.c  game.c  help.c  htab.c  log.c  look.c  macros.h  match.c  mguests.c  move.c  nametabs.c  (+28 more)
netmush/tests/: bench_getColorMatch.c  help_selftest.c  shim_alloc.c  test_vt100.c
src/: Doxyfile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  alloc.c  alloc.h  ansi.h  api.c  api.h  attrs.h  autoconf.h.in  autoconfig.h  autoinclude.h  bitstring.h  boolexp.c  bsd.c  cmdtabs.h  command.c  command.h  compat.c  conf.c  config.h  config.h.in  configure  configure.ac  configure.scan  constants.h  copyright.h  cque.c  create.c  db.c  db.h  db_rw.c  db_sql.h  db_sql_empty.c  db_sql_pgsql.c  defaults.h.in  eval.c  externs.h  (+89 more)
src/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
src/configs/: compat.conf  netmush.conf.example.in
src/dbm/gdbm/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  autoconf.h.in  configure  configure.ac  gdbmbucket.c  gdbmclose.c  gdbmconst.h  gdbmcopyright.h  gdbmdefs.h  gdbmdelete.c  gdbmerrno.c  gdbmerrno.h  gdbmexists.c  gdbmextern.h  gdbmfalloc.c  gdbmfdesc.c  gdbmfetch.c  gdbmfindkey.c  gdbmglobal.c  gdbmhash.c  gdbmopen.c  gdbmproto.h  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmstore.c  gdbmsync.c  gdbmsystems.h  gdbmupdate.c  gdbmversion.c  libtinygdbm.foot.h  libtinygdbm.head.h
src/dbm/gdbm/autom4te.cache/: output.0  output.2  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.5  traces.6  traces.7  traces.8
src/dbm/gdbm/libltdl/: configure
src/dbm/qdbm/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  autoconf.h  autoconf.h.in  config.status  configure  configure.ac  copyright.h  copyright.h~  curia.c  curia.h  depot.c  depot.h  hovel.c  hovel.h  libtinyqdbm.h  libtool  myconf.c  myconf.h  stamp-h1
src/dbm/qdbm/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/dbm/qdbm/libltdl/m4/: tinymush.m4
src/dbm/qdbm/m4/: tinymush.m4
src/docs/: help.txt  mushman.txt  newuser.txt
src/etc/: compat.conf  netmush.conf.example  netmush.conf.example.in  netmush.conf.in
src/lib/: Makefile.am  Makefile.in  sys_file.in.h  sys_resource.in.h
src/libltdl/: Makefile.am  Makefile.in  aclocal.m4  argz.c  configure  configure.ac  lt__dirent.c  lt__strl.c  lt_dlloader.c  ltdl.h
src/libltdl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/libltdl/config/: shtool
src/libltdl/config/snippet/: c++defs.h
src/libltdl/libltdl/: lt__alloc.h  lt__glibc.h  lt_dlloader.h  lt_error.h  slist.h
src/libltdl/loaders/: dld_link.c  dlopen.c  load_add_on.c  loadlibrary.c  preopen.c
src/libltdl/loaders/.deps/: dlopen.Plo  libltdlc_la-preopen.Plo
src/libltdl/m4/: tinymush.m4
src/m4/: gnulib-cache.m4  gnulib-comp.m4
src/modules/comsys/: CMakeLists.txt  Makefile.am  Makefile.in  comsys.c
src/modules/comsys/.libs/: comsys.lai
src/modules/db_sql/: Makefile.am  Makefile.in  README  db_sql.c  db_sql.h  db_sql_msql.c  db_sql_mysql.c  db_sql_none.c  db_sql_pgsql.c  db_sql_sqlite3.c
src/modules/db_sql/m4/: ax_check_msql.m4
src/modules/db_sql_msql/: db_sql_msql.c
src/modules/db_sql_mysql/: db_sql_mysql.c
src/modules/db_sql_none/: Makefile.am  db_sql_none.c
src/modules/hello/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  hello.c
src/modules/hello/autom4te.cache/: output.1  requests  traces.0  traces.1
src/modules/hello/libltdl/autom4te.cache/: traces.0
src/modules/mail/: Makefile.am  Makefile.in  mail.c  mail.h
src/modules/mail/.libs/: mail.lai
src/modules/skeleton/: CMakeLists.txt  QUICK_REFERENCE.md  README.md  skeleton.c  skeleton.h
src/netmush/: CMakeLists.txt  alloc.c  ansi.c  ansi.h  api.c  boolexp.c  boolexp_eval.c  boolexp_internal.h  boolexp_parse.c  bsd.c  bsd_conn.c  bsd_connection.c  bsd_dns.c  bsd_internal.h  bsd_io.c  bsd_main.c  bsd_sig.c  bsd_signals.c  bsd_socket.c  command.c  command_access.c  command_admin.c  command_config.c  command_core.c  command_dispatch.c  command_hooks.c  command_info.c  command_init.c  command_internal.h  command_list.c  conf.c  conf.h  conf_access.c  conf_advanced.c  conf_core.c  conf_data.c  conf_display.c  conf_files.c  conf_handlers.c  conf_help.c  (+153 more)
src/scripts/: Archive  Backup  Index  Logclean  ReportCrash  Restore  Startmush  Startmush.in  alias.conf  check_paths  compute_lab.py  cvtmux.pl  mush.config  netmush.conf  regenerate_palettes.py
src/share/: connect.txt  help.txt  htmlconn.txt  quit.txt  wizhelp.txt  wizmotd.txt
src/systemd/: tinymush.service.in
src/text/: help.txt  plushelp.txt  register.txt  wizhelp.txt
(+1436 files in other folders)
